# bnl

./: .cursorignore  .github_issue_draft.md  .gitignore  .readthedocs.yaml  AGENTS.md  MANIFEST.in  README.md  __init__.py  agents.md  environment.yml  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.devcontainer/: devcontainer.json
apps/: exp.py  kde.py
bmeasure_exp/: est.ipynb  est_boundary_metrics.feather  est_boundary_metrics.nc  ref_boundary_metrics.feather
bnl/: __init__.py  clean_segment.py  core.py  expand_hier.py  external.py  fast_metrics.py  fileio.py  formatting.py  metrics.py  mono_casting.py  profiling.py  standalone_metrics.py  utils.py  viz.py
bnl/formats/: __init__.py  internal.py
bnl/hierarchy/: __init__.py  internal.py
bnl/plotting/: __init__.py  internal.py
docs/: conf.py  index.rst
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: bnl.rst  ops.rst  viz.rst
docs/pages/: examples.rst  quickstart.rst
examples/: create_readme_plots.py  monotonic_casting_demo.py
notebooks/: 0_test_zone.ipynb  8_1_tmeasure_issues.ipynb  8_2_mono_casting_effects.ipynb  8_2_mono_casting_effects_tmeasure.ipynb  8_3_plot_monocasting_tmeasure.ipynb  8_4_bmeasure.ipynb  9_1_combining_hr_po.ipynb  9_2_plotting_monocasting_b_vs_t.ipynb  bmeasure_slm_inter_anno_results.feather  data_loading_demo.ipynb  development.ipynb  mir_eval_slm_inter_anno_results.feather  monocasting_bmeasure.feather  monocasting_results.csv  monocasting_results.feather  tmeasure_issues.ipynb
scripts/: bmeasure_exp.ipynb  boundary_metrics.pkl  build_cloud_manifest.py  build_local_manifest.py  build_manifest.py  compare_implementation.nc  depth_sweep.nc  depth_sweep_all.nc  depth_sweep_runtime.feather  exp.ipynb  exp_ranking_boundareis.ipynb  fs_sensitivity.csv  fs_sensitivity_adobe_776.csv  lose_the_frame_exps.py  lose_the_frame_plots.py  meet_mats.py  new_compare.nc  new_faster_compare.nc  old_plots.py  plots.py  plots2.py  ref_boundary_metrics.nc  run.py  run.sbatch  salami_durations.json  to_profile.py  ws.ipynb  wslp.ipynb
src/bnl/: __init__.py  core.py  data.py  exp.py  lsd.py  metrics.py  ops.py  relevance.py  strategies.py  viz.py  viz_mpl.py  viz_plotly.py
src/bnl/core/: __init__.py  hierarchy.py  segment.py
src/bnl/data/: __init__.py  base.py  salami.py
src/bnl/metrics/: flat.py  hier.py
src/bnl/resources/: manifest_cloud_boolean.csv
tests/: __init__.py  test_bnl.py  test_core.py  test_core_edge_cases.py  test_data.py  test_data_edge_cases.py  test_data_edges.py  test_data_loading_edge_cases.py  test_formats.py  test_formatting.py  test_hierarchy.py  test_integration.py  test_metrics.py  test_ops.py  test_standalone_metrics.py  test_viz.py
tests/fixtures/: test-manifest.csv  test_manifest.csv
tests/fixtures/adobe/def_mu_0.1_gamma_0.1/: 8.mp3.msdclasscsnmagic.json
tests/fixtures/annotations/: temp_exotic.jams  test_empty.jams  test_hier.jams  test_hier.json  test_malformed.json  test_multi_ann.jams  test_seg.jams  unsupported.txt
tests/metrics/: test_metrics_flat.py  test_metrics_hier.py
texts/: ismir.sty  main.tex
texts/content/: flat_metric.tex  hier_metric.tex  log.tex  refs.bib
