[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnl"
version = "0.2.1"
description = "Boundary and Labeling: Tools for Hierarchical Music Structure Analysis"
readme = "README.md"
authors = [{ name = "Tom Xi", email = "tom.xi@nyu.edu" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "librosa",
    "pyarrow",
    "seaborn",
    "mir_eval",
    "jams",
    "requests",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pytest-mock"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-autobuild",
]
notebooks = ["jupyter", "ipykernel"]
apps = ["streamlit"]
cloud = ["boto3>=1.38.44,<2"]

[project.urls]
Homepage = "https://github.com/tomxi/bnl"
"Bug Tracker" = "https://github.com/tomxi/bnl/issues"
"Documentation" = "https://bnl.readthedocs.io/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "UP", "A", "B"]
ignore = ["B905", "C901"] # allow zip without strict=True, ignore complexity for now

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in __init__ files
"tests/*" = ["A003"]
"docs/conf.py" = ["A001"]

[[tool.mypy.overrides]]
module = "jams"
ignore_missing_imports = true

[tool.ruff.lint.isort]
known-first-party = ["bnl"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "remote_data: marks tests as requiring remote data access (deselect with '-m \"not remote_data\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:jsonschema.*",
]
