# This file's Python dependencies should be kept in sync with pyproject.toml
# When adding/removing Python dependencies, update both files.

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnl"
version = "0.0.3"
description = "Boundaries and Labels: Tools for Hierarchical Music Structure Analysis"
readme = "README.md"
authors = [{ name = "Tom Xi", email = "tom.xi@nyu.edu" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "mir_eval",
    "jams",
    "requests",
    "scipy",
    "scikit-learn",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-autobuild",
    "autoclasstoc",
]
dash = ["dash", "dash-mantine-components", "kaleido"]
notebooks = ["jupyter", "ipykernel"]

[project.urls]
Homepage = "https://github.com/tomxi/bnl"
"Bug Tracker" = "https://github.com/tomxi/bnl/issues"
"Documentation" = "https://bnl.readthedocs.io/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["**/notebooks", "**/*.ipynb"]
force-exclude = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "UP", "A", "B"]
ignore = ["B905", "N817"] # zip strict flag; importing acronyms

[tool.ruff.lint.isort]
known-first-party = ["bnl"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
    "--cov=bnl",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
filterwarnings = [
    "ignore::DeprecationWarning:jsonschema.*",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]
